package persistence;

import java.util.Date;

public class InvoiceDTO {
    public String id;
    public Date date;
    public String customer;
    public String room_id;
    public double unitPrice;
    public int hour;
    public int day;
    public String type;
}
